Added ML8511 functionality

--- a/fw/ini/stm32f1.ini
+++ b/fw/ini/stm32f1.ini
@@ -22,7 +22,7 @@
 [common_STM32F103RC_variant]
 extends              = stm32_variant
 board                = genericSTM32F103RC
-board_build.variant  = MARLIN_F103Rx
+board_build.variant  = MARLIN_F103Rx_DRLCD
 build_flags          = ${stm32_variant.build_flags} -DDEBUG_LEVEL=0
 monitor_speed        = 115200
 
@@ -190,7 +190,7 @@ board   = genericSTM32F103RC
 [env:STM32F103RE_btt]
 extends                     = stm32_variant
 board                       = genericSTM32F103RE
-board_build.variant         = MARLIN_F103Rx
+board_build.variant         = MARLIN_F103Rx_DRLCD
 board_build.offset          = 0x7000
 board_upload.offset_address = 0x08007000
 build_flags                 = ${stm32_variant.build_flags}
