--- a/fw/ini/stm32g0.ini
+++ b/fw/ini/stm32g0.ini
@@ -26,7 +26,7 @@
 extends                     = stm32_variant
 platform                    = ststm32@~14.1.0
 platform_packages           = framework-arduinoststm32@https://github.com/stm32duino/Arduino_Core_STM32/archive/main.zip
-board                       = marlin_STM32G0B1RE
+board                       = genericSTM32G0B1RE
 board_build.offset          = 0x2000
 board_upload.offset_address = 0x08002000
 build_flags                 = ${stm32_variant.build_flags}
